--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <header>
+      <%= render "layouts/header" %>
+    </header>
+    <hr>
     <%if flash.notice%>
       <p class="notice"><%= notice %></p>
     <%end%>
