--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,7 +4,7 @@
   <p><%= form.label :recommend_point, "おすすめポイント" %> <%= form.text_area :recommend_point %></p>
   <p><%= form.label :situation, "シチュエーション" %> <%= form.text_field :situation %></p>
   <p><%= form.label :area, "エリア" %> <%= form.text_field :area %></p>
-  <%# 画像アップロード %>
+  <p><%= form.label :recommend_image, "おすすめスポット" %> <%= form.file_field :recommend_image, accept: "image/png,image/jpeg,image/gif" %></p>
   <p>おすすめ度(1~5の中から選んでください)</p>
   <%= form.fields_for :post_valuation do |post_val| %>
     <p><%= post_val.label :access_point, "アクセス" %> <%= post_val.number_field :access_point, min: 1, max: 5 %></p>
