--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,11 +3,14 @@
 <p>おすすめポイント <%= @post.recommend_point %></p>
 <p>シチュエーション <%= @post.situation %></p>
 <p>エリア <%= @post.area %></p>
+<%# 画像がある場合は表示 %>
+<% if @post.recommend_image? %>
+  <p>おすすめスポット：<%= image_tag @post.recommend_image.url %></p>
+<% end %>
 <p>ポイント</p>
 <p><%= @post.post_valuation.access_point %></p>
 <p><%= @post.post_valuation.casually_point %></p>
 <p><%= @post.post_valuation.price_point %></p>
 <p><%= @post.post_valuation.go_to_again_point %></p>
 <p><%= @post.post_valuation.one_person_point %></p>
-<%# 画像 %>
 <%# グラフ %>
