--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,7 @@
     <header>
       <%= render "layouts/header" %>
     </header>
-    <hr>
-    <%if flash.notice%>
-      <p class="notice"><%= notice %></p>
-    <%end%>
-    <%if flash.alert%>
-      <p class="alert"><%= alert %></p>
-    <%end%>
+    <%= render "layouts/flash" %>
     <%= yield %>
   </body>
 </html>
