--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,2 @@
 <h1>おすすめスポット一覧</h1>
-<% @posts.each do |post| %>
-  <p>タイトル：<%= post.title %></p>
-  <p>シチュエーション：<%= post.situation %></p>
-  <p>エリア：<%= post.area %></p>
-  <%# 画像がある場合は表示 %>
-  <% if post.recommend_image? %>
-    <p>おすすめスポット：<%= image_tag post.recommend_image.url %></p>
-  <% end %>
-  <p><%= link_to "詳細", post %></p>
-  <p><%= link_to "編集", edit_post_path(post) %></p>
-  <p><%= link_to "削除", post, method: :delete, data: { confirm: "削除しますか?" } %></p>
-<% end %>
+<%= render @posts %>
