--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,6 +7,14 @@
   <% if post.recommend_image? %>
     <p>おすすめスポット：<%= image_tag post.recommend_image.url %></p>
   <% end %>
+  <%# いいね機能 %>
+  <p id="post-<%= post.id %>">
+    <% if post.liked_by?(current_user) %>
+      <%= render "like", post: post %>
+    <% else %>
+      <%= render "dislike", post: post %>
+    <% end %>
+  </p>
   <p><%= link_to "詳細", post %></p>
   <%# 自分の投稿のみ編集、削除を表示する %>
   <% if current_user.id == post.user_id %>
