--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,6 +15,8 @@
       <%= render "dislike", post: post %>
     <% end %>
   </p>
+  <%# コメント数 %>
+  <p><%= post.comments.count %>コメント</p>
   <p><%= link_to "詳細", post %></p>
   <%# 自分の投稿のみ編集、削除を表示する %>
   <% if current_user.id == post.user_id %>
