--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,6 +23,21 @@
     <%= render "dislike", post: @post %>
   <% end %>
 </p>
+<%# コメント機能 %>
+<%= form_with model: [@post, @comment], local: true do |form| %>
+  <p><%= form.label :content %> <%= form.text_area :content %></p>
+  <%= form.submit "コメントする" %>
+<% end %>
+<p>コメント件数：<%= @comments.count %></p>
+<% @comments.each do |comment| %>
+  <p><%= comment.user.name %></p>
+  <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+  <p><%= comment.content %></p>
+  <% if comment.user == current_user %>
+    <p><%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, data: { confirm: "削除しますか？" } %>
+    </p>
+  <% end %>
+<% end %>
 <%# 自分の投稿の場合は編集、削除を表示 %>
 <% if current_user.id == @post.user_id %>
   <p>
