--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,9 @@ div.field_with_errors {
     border: 2px solid red;
   }
 }
+
+.base-container {
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 600px;
+}
