--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,9 @@
 <p><%= @post.post_valuation.go_to_again_point %></p>
 <p><%= @post.post_valuation.one_person_point %></p>
 <%# グラフ %>
+<div class="base-container">
+  <canvas id="line-chart" width="100%" height="100%"></canvas>
+</div>
 <%# いいね機能 %>
 <p id="post-<%= @post.id %>">
   <% if @post.liked_by?(current_user) %>
