--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,36 +16,11 @@
 </div>
 <%# マップ %>
 <p>場所</p>
-<script>
-  function initMap() {
-    const position = {lat: <%= @post.latitude %>, lng: <%= @post.longitude %>};
-    const map = new google.maps.Map(document.getElementById('map'), {
-              zoom: 15,
-              center: position
-              });
-    const transitLayer = new google.maps.TransitLayer();
-    transitLayer.setMap(map);
-    const contentString = '場所：<%= @post.address %>';
-    const infowindow = new google.maps.InfoWindow({
-      content: contentString
-    });
-    const marker = new google.maps.Marker({
-                  position:position,
-                  map: map,
-                  title: contentString
-                });
-    marker.addListener('click', function() {
-      infowindow.open(map, marker);
-    });
-  }
-</script>
-<script async defer
-             src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
-<style type="text/css">
-  #map { height: 400px;
-        width: 500px;}
-</style>
+<div id="map-info" data-map-info="<%= @post.to_json %>"></div>
 <div id="map"></div>
+<%= javascript_pack_tag "map" %>
+<script async defer
+             src="https://maps.googleapis.com/maps/api/js?v=weekly&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
 <%# いいね機能 %>
 <p id="post-<%= @post.id %>">
   <% if @post.liked_by?(current_user) %>
