--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
+<p>ユーザー情報</p>
+<p>ユーザー名： <%= @user.name %></p>
+<p>プロフィール画像： <%= image_tag @user.profile_image.thumb.url %></p>
+<p>住んでいる都道府県： <%= @user.address %></p>
+<p>行きたい場所： <%= @user.go_to_area %></p>
+<p>好きなシュチュエーション： <%= @user.like_situation %></p>
 <% @posts.each do |post| %>
   <p>タイトル：<%= post.title %></p>
   <p>シチュエーション：<%= post.situation %></p>
