ユーザー情報ページの追加

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
 <div>
-  <p>ユーザー名: <%= post.user.name %></p>
+  <p>ユーザー名:<%= link_to "#{post.user.name}", user_profile_path(post.user.id) %></p>
+  <p><%= image_tag post.user.profile_image.url %></p>
   <p>タイトル：<%= post.title %></p>
   <p>シチュエーション：<%= post.situation %></p>
   <p>エリア：<%= post.area %></p>
