ページ全体の最大横幅を設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ div.field_with_errors {
 }
 
 .base-container {
-  margin: 0 auto;
-  padding: 1rem;
-  max-width: 600px;
+  @extend .container-fluid;
+  max-width: var(--breakpoint-lg);
+  padding: 30px 15px;
 }
