--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
     <header>
       <%= render "layouts/header" %>
     </header>
-    <%= render "layouts/flash" %>
-    <%= yield %>
+    <main>
+      <%= render "layouts/flash" %>
+      <div class="base-container">
+        <%= yield %>
+      </div>
+    </main>
   </body>
 </html>
