--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,38 @@
+// posts/_post.html.erb
+.card {
+  width: 30rem;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 300px;
+}
+
+.user-info {
+  display: flex;
+
+  .user-image {
+    width: 30%;
+    height: auto;
+  }
+}
+
+
+.like-comment-info {
+  display: flex;
+
+  p {
+    margin: 0;
+  }
+}
+
+.post-link {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 15px 0;
+}
+
+// show.html.erb
 #map {
   height: 400px;
   width: 500px;
