--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,11 +2,11 @@
 <%= form_with model: @post, local: true do |form| %>
   <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
+    <%= form.text_field :title, class: "form-control", required: true %>
   </div>
   <div class="form-group">
     <%= form.label :recommend_point %>
-    <%= form.text_area :recommend_point, class: "form-control" %>
+    <%= form.text_area :recommend_point, class: "form-control", required: true %>
   </div>
   <div class="form-group">
     <%= form.label :situation %>
@@ -30,25 +30,25 @@
       <div class="form-row">
         <div class="col">
           <%= post_val.label :access_point %>
-          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :casually_point %>
-          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :price_point %>
-          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
       </div>
       <div class="form-row">
         <div class="col">
           <%= post_val.label :go_to_again_point %>
-          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :one_person_point %>
-          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
       </div>
     <% end %>
@@ -57,25 +57,25 @@
       <div class="form-row">
         <div class="col">
           <%= post_val.label :access_point %>
-          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :casually_point %>
-          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control"%>
+          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :price_point %>
-          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
       </div>
       <div class="form-row">
         <div class="col">
           <%= post_val.label :go_to_again_point %>
-          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
         <div class="col">
           <%= post_val.label :one_person_point %>
-          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control" %>
+          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
         </div>
       </div>
     <% end %>
