--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,10 @@ div.field_with_errors {
 }
 
 // フラッシュ
+.alert {
+  margin-bottom: 0px
+}
+
 .alert-notice {
   @extend .alert-success;
 }
@@ -47,4 +51,21 @@ div.field_with_errors {
 
 body {
   padding-top: 56px;
+}
+
+// footer
+.footer-container {
+  padding: 20px 20px;
+  text-align: center;
+}
+
+.footer-container .logo {
+  width: 80px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+}
+
+.copyright {
+  color: #fff;
+  margin-bottom: 0px;
 }
