--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,16 @@
     </header>
     <main>
       <%= render "layouts/flash" %>
-      <div class="base-container">
+      <% if user_signed_in? %>
+        <div class="base-container">
+          <%= yield %>
+        </div>
+      <%else%>
         <%= yield %>
-      </div>
+      <% end %>
     </main>
+    <footer>
+      <%= render "layouts/footer" %>
+    </footer>
   </body>
 </html>
