--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -10,27 +10,27 @@
   overflow: hidden;
   background-size: cover;
   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%), url(hero.jpg) no-repeat center center scroll;
-}
 
-.masthead>h1 {
-  font-style: normal;
-  font-weight: bold;
-  color: #fff;
-  font-size: 6vmin;
-  letter-spacing: 0.03em;
-  line-height: 1;
-  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
-  margin-bottom: 40px;
-}
+  >h1 {
+    font-style: normal;
+    font-weight: bold;
+    color: #fff;
+    font-size: 6vmin;
+    letter-spacing: 0.03em;
+    line-height: 1;
+    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
+    margin-bottom: 40px;
+  }
 
-.masthead>h2 {
-  font-style: normal;
-  font-weight: bold;
-  color: #fff;
-  font-size: 4vmin;
-  letter-spacing: 0.03em;
-  line-height: 1;
-  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
+  >h2 {
+    font-style: normal;
+    font-weight: bold;
+    color: #fff;
+    font-size: 4vmin;
+    letter-spacing: 0.03em;
+    line-height: 1;
+    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
+  }
 }
 
 // posts/_post.html.erb
