--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,6 +1,9 @@
-.login-container {
+.login-container,
+.sign-up-container {
   text-align: center;
-  padding: 120px 0px 180px;
+  margin: 120px 600px 180px;
+  padding: 50px 0;
+  border: 1px #a4a4a4 solid;
 
   >h2 {
     font-size: 2.5rem;
