--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,3 +1,4 @@
+// 新規登録、ログイン画面
 .login-container,
 .sign-up-container {
   text-align: center;
@@ -7,6 +8,18 @@
 
   >h2 {
     font-size: 2.5rem;
+    margin-bottom: 30px;
+  }
+}
+
+// パスワードリセット画面
+.pass-reset-container {
+  text-align: center;
+  margin: 140px 600px 200px;
+  padding: 60px 0;
+  border: 1px #a4a4a4 solid;
+
+  >h2 {
     margin-bottom: 30px;
   }
 }
