--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -8,7 +8,10 @@
     </h2>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="alert alert-danger" role="alert">
+          <a href="#" class="close" data-dismiss="alert">×</a>
+          <%= message %>
+        </li>
       <% end %>
     </ul>
   </div>
