投稿画面のレイアウト修正

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,63 +24,55 @@
     <%= form.label :recommend_image %>
     <%= form.file_field :recommend_image, accept: "image/png,image/jpeg,image/gif", class: "form-control-file" %>
   </div>
-  <p>おすすめ度(1~5の中から選んでください)</p>
+  <h2>おすすめ度(1~5の中から選んでください)</h2>
   <% if request.path_info == new_post_path %>
     <%= form.fields_for :post_valuation, @post.build_post_valuation do |post_val| %>
-      <div class="form-row">
-        <div class="col">
-          <%= post_val.label :access_point %>
-          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :casually_point %>
-          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :price_point %>
-          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
+      <div class="form-group">
+        <%= post_val.label :access_point %>
+        <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
       </div>
-      <div class="form-row">
-        <div class="col">
-          <%= post_val.label :go_to_again_point %>
-          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :one_person_point %>
-          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
+      <div class="form-group">
+        <%= post_val.label :casually_point %>
+        <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :price_point %>
+        <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :go_to_again_point %>
+        <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :one_person_point %>
+        <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
       </div>
     <% end %>
   <% else %>
     <%= form.fields_for :post_valuation do |post_val| %>
-      <div class="form-row">
-        <div class="col">
-          <%= post_val.label :access_point %>
-          <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :casually_point %>
-          <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :price_point %>
-          <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
+      <div class="form-group">
+        <%= post_val.label :access_point %>
+        <%= post_val.number_field :access_point, min: 1, max: 5, class: "form-control", required: true %>
       </div>
-      <div class="form-row">
-        <div class="col">
-          <%= post_val.label :go_to_again_point %>
-          <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
-        <div class="col">
-          <%= post_val.label :one_person_point %>
-          <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
-        </div>
+      <div class="form-group">
+        <%= post_val.label :casually_point %>
+        <%= post_val.number_field :casually_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :price_point %>
+        <%= post_val.number_field :price_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :go_to_again_point %>
+        <%= post_val.number_field :go_to_again_point, min: 1, max: 5, class: "form-control", required: true %>
+      </div>
+      <div class="form-group">
+        <%= post_val.label :one_person_point %>
+        <%= post_val.number_field :one_person_point, min: 1, max: 5, class: "form-control", required: true %>
       </div>
     <% end %>
   <% end %>
-  <div>
+  <div class="btn-container">
     <%= form.submit button_value, class: "btn btn-primary btn-block" %>
   </div>
 <% end %>
