--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
-<h1>おすすめスポットを投稿する</h1>
-<%= render "form", button_value: "投稿する" %>
+<div class="post-form-container">
+  <h1>おすすめスポットを投稿する</h1>
+  <%= render "form", button_value: "投稿する" %>
+</div>
