--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -67,6 +67,48 @@
   padding: 15px 0;
 }
 
+// new.html.erb
+.post-form-container {
+  text-align: center;
+  margin-bottom: 80px;
+
+  h1 {
+    margin: 45px 0;
+  }
+
+  h2 {
+    padding: 30px 0;
+    font-size: 1.8rem;
+  }
+
+  form {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .form-group {
+    display: flex;
+    justify-content: right;
+    margin-bottom: 30px;
+    width: 80%;
+
+    label {
+      margin-right: 30px;
+    }
+
+    input,
+    textarea {
+      width: 50%;
+    }
+  }
+
+  .btn-container {
+    width: 60%;
+    padding: 30px 0;
+    margin: 0 auto;
+  }
+}
+
 // show.html.erb
 #map {
   height: 400px;
