--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -46,6 +46,33 @@
   }
 }
 
+// ユーザー編集画面
+.user-edit-container {
+  padding: 100px 0;
+  margin: 100px auto;
+  width: 80%;
+  text-align: center;
+  border: 1px #a4a4a4 solid;
+
+  >h2 {
+    font-size: 2.2rem;
+    margin-bottom: 45px;
+  }
+
+  .field {
+    margin-bottom: 30px;
+
+    label {
+      font-size: 1.2rem;
+      margin-bottom: 14px;
+    }
+
+    input {
+      margin-bottom: 10px;
+    }
+  }
+}
+
 // エラー
 #error_explanation {
   h2 {
