--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,44 @@
-<p>ユーザー情報</p>
-<% if current_user.id == @user.id %>
-  <%= link_to "アカウント編集", edit_user_registration_path %>
-<% end %>
-<p>ユーザー名： <%= @user.name %></p>
-<p>プロフィール画像： <%= image_tag @user.profile_image.url %></p>
-<p>住んでいる都道府県： <%= @user.address %></p>
-<p>行きたい場所： <%= @user.go_to_area %></p>
-<p>好きなシュチュエーション： <%= @user.like_situation %></p>
-<p>投稿一覧</p>
-<% @posts.each do |post| %>
-  <p>タイトル：<%= post.title %></p>
-  <p>シチュエーション：<%= post.situation %></p>
-  <p>エリア：<%= post.area %></p>
-  <% if post.recommend_image? %>
-    <p>おすすめスポット：<%= image_tag post.recommend_image.url %></p>
-  <% end %>
-  <p><%= link_to "詳細", post %></p>
+<div class="user-container">
+  <h1>ユーザー情報</h1>
   <% if current_user.id == @user.id %>
-    <p><%= link_to "編集", edit_post_path(post) %></p>
-    <p><%= link_to "削除", post, method: :delete, data: { confirm: "削除しますか?" } %></p>
+    <%= link_to "アカウント編集", edit_user_registration_path, class: "btn btn-primary" %>
   <% end %>
-<% end %>
+  <div class="user-name-image">
+    <p><%= @user.name %></p>
+    <%= image_tag @user.profile_image.url %>
+  </div>
+  <table>
+    <tbody>
+      <tr>
+        <th>住んでいる都道府県</th>
+        <td><%= @user.address %></td>
+      </tr>
+      <tr>
+        <th>行きたい場所</th>
+        <td><%= @user.go_to_area %></td>
+      </tr>
+      <tr>
+        <th>好きなシュチュエーション</th>
+        <td><%= @user.like_situation %></td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="post-contaier">
+    <h2>投稿一覧</h2>
+    <% @posts.each do |post| %>
+      <div class="post-wrap">
+        <h3><%= post.title %></h3>
+        <p>シチュエーション：<%= post.situation %></p>
+        <p>エリア：<%= post.area %></p>
+        <% if post.recommend_image? %>
+          <%= image_tag post.recommend_image.url %>
+        <% end %>
+        <p><%= link_to "詳細", post %></p>
+        <% if current_user.id == @user.id %>
+          <p><%= link_to "編集", edit_post_path(post) %></p>
+          <p><%= link_to "削除", post, method: :delete, data: { confirm: "削除しますか?" } %></p>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
