--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -134,9 +134,18 @@
       margin-bottom: 20px;
     }
 
-    img {
-      width: 80px;
-      height: 80px;
+    .post-image {
+      display: block;
+      margin: 30px 0 45px;
+      width: 400px;
+      height: 240px;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+
+    .btn-post {
+      display: inline-block;
+      margin-right: 8px;
     }
   }
 }
