--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -33,7 +33,7 @@
   }
 }
 
-// posts/_post.html.erb
+// _post.html.erb
 .card {
   width: 30rem;
 }
@@ -99,6 +99,49 @@
     input,
     textarea {
       width: 50%;
+    }
+  }
+
+  .btn-container {
+    width: 60%;
+    padding: 30px 0;
+    margin: 0 auto;
+  }
+}
+
+// edit.html.erb
+.post-edit-container {
+  margin: 100px 0;
+  text-align: center;
+
+  h1 {
+    margin-bottom: 30px;
+    font-size: 2.2rem;
+  }
+
+  h2 {
+    padding: 20px 0;
+    font-size: 1.8rem;
+  }
+
+  form {
+    width: 80%;
+    margin: 0 auto;
+
+    .form-group {
+      display: flex;
+      justify-content: right;
+      margin-bottom: 30px;
+      width: 80%;
+
+      label {
+        margin-right: 30px;
+      }
+
+      input,
+      textarea {
+        width: 50%;
+      }
     }
   }
 
