--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>おすすめスポットを編集する</h1>
-<%= render "form", button_value: "更新する" %>
+<div class="post-edit-container">
+  <h1>おすすめスポットを編集する</h1>
+  <%= render "form", button_value: "更新する" %>
+</div>
