--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="post-edit-container">
   <h1>おすすめスポットを編集する</h1>
   <%= render "form", button_value: "更新する" %>
+  <%= link_to "戻る", :back %>
 </div>
