--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="post-contaier">
+  <div class="post-container">
     <h2>投稿一覧</h2>
     <% @posts.each do |post| %>
       <div class="post-wrap">
