--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -153,13 +153,113 @@
 }
 
 // show.html.erb
-#map {
-  height: 400px;
-  width: 500px;
+.post-show-container {
+  padding: 100px 0;
+
+  h1 {
+    margin-bottom: 45px;
+    font-size: 2.2rem;
+  }
+
+  .user-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+
+    .user-name {
+      font-size: 1.2rem;
+      margin-right: 45px;
+    }
+
+    img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+  }
+
+  .post-info-container {
+    display: flex;
+    margin-bottom: 30px;
+
+    .post-info {
+      width: 50%;
+
+      h2 {
+        font-size: 1.8rem;
+        margin-bottom: 20px;
+      }
+
+      .show-box {
+        position: relative;
+        padding: 0.5em 0.7em;
+        margin: 0 0 1.2em;
+        background: #e6f4ff;
+        font-weight: bold;
+
+        :after {
+          position: absolute;
+          content: '';
+          top: 100%;
+          left: 30px;
+          border: 15px solid transparent;
+          border-top: 15px solid #e6f4ff;
+          width: 0;
+          height: 0;
+        }
+
+        p {
+          margin: 0;
+          padding: 0;
+        }
+      }
+
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .radar-container {
+      width: 50%;
+      padding: 0;
+    }
+  }
+
+  .like-comment-container {
+    display: flex;
+
+    .like-btn {
+      margin-right: 30px;
+    }
+
+    textarea {
+      margin-right: 15px;
+    }
+  }
+
+  .map-container {
+    margin-bottom: 30px;
+
+    h3 {
+      font-size: 1.6rem;
+      margin-bottom: 12px;
+    }
+
+    #map {
+      width: 100%;
+      height: 400px;
+    }
+  }
+
+  .button {
+    margin-right: 12px;
+  }
 }
 
+
 // マイページ投稿一覧
-.post-contaier {
+.post-container {
   margin-top: 100px;
 
   h2 {
