--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -33,38 +33,75 @@
   }
 }
 
+// index.html
 // _post.html.erb
-.card {
-  width: 30rem;
-}
+.post-index-container {
+  padding: 100px 0;
 
-.card-img-top {
-  width: 100%;
-  height: 300px;
-}
-
-.user-info {
-  display: flex;
-
-  .user-image {
-    width: 30%;
-    height: auto;
+  h1 {
+    text-align: center;
   }
-}
 
+  .post_search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0 60px;
 
-.like-comment-info {
-  display: flex;
-
-  p {
-    margin: 0;
+    .search-form {
+      width: 40%;
+      height: 40px;
+      margin-right: 15px;
+    }
   }
-}
 
-.post-link {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 15px 0;
+  .card {
+    margin: 0 auto 60px;
+    width: 60%;
+
+    .card-img-top {
+      width: 100%;
+      height: 360px;
+    }
+
+    .user-info {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+
+      p {
+        margin-right: 30px;
+        font-size: 1.2rem;
+      }
+
+      .user-image {
+        width: 80px;
+        height: 80px;
+      }
+    }
+
+    .list-group-item {
+      .like-btn {
+        margin: 0;
+      }
+    }
+
+    .post-link {
+      padding: 0.75rem 1.25rem;
+
+      .button {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  .pagination {
+    justify-content: center;
+
+    span {
+      margin-right: 10px;
+    }
+  }
 }
 
 // new.html.erb
@@ -215,8 +252,7 @@
       }
 
       img {
-        width: 100%;
-        object-fit: cover;
+        height: 300px;
       }
     }
 
