--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,36 +5,31 @@
   <% end %>
   <div class="card-body">
     <div class="user-info">
-      <p>ユーザー名:<%= link_to "#{post.user.name}", user_profile_path(post.user.id) %></p>
+      <p>ユーザー名：<%= link_to "#{post.user.name}", user_profile_path(post.user.id) %></p>
       <%= image_tag post.user.profile_image.url, class: "user-image" %>
     </div>
-    <h2 class="card-title">タイトル：<%= post.title %></h2>
+    <h2 class="card-title"><%= post.title %></h2>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">シチュエーション：<%= post.situation %></li>
     <li class="list-group-item">エリア：<%= post.area %></li>
-    <%# いいね %>
     <li class="list-group-item">
-      <div class="like-comment-info">
-        <%# いいね機能 %>
-        <p id="post-<%= post.id %>">
-          <% if post.liked_by?(current_user) %>
-            <%= render "like", post: post %>
-          <% else %>
-            <%= render "dislike", post: post %>
-          <% end %>
-        </p>
-        <%# コメント数 %>
-        <p><%= post.comments.count %>コメント</p>
-      </div>
+      <%# いいね機能 %>
+      <p id="post-<%= post.id %>" class="like-btn">
+        <% if post.liked_by?(current_user) %>
+          <%= render "like", post: post %>
+        <% else %>
+          <%= render "dislike", post: post %>
+        <% end %>
+      </p>
     </li>
   </ul>
   <div class="post-link">
-    <%= link_to "詳細", post, class: "btn btn-primary" %>
+    <%= link_to "詳細", post, class: "btn btn-primary button" %>
     <%# 自分の投稿のみ編集、削除を表示する %>
     <% if current_user.id == post.user_id %>
-      <%= link_to "編集", edit_post_path(post), class: "btn btn-primary" %>
-      <%= link_to "削除", post, method: :delete, data: { confirm: "削除しますか?" }, class: "btn btn-danger" %>
+      <%= link_to "編集", edit_post_path(post), class: "btn btn-primary button" %>
+      <%= link_to "削除", post, method: :delete, data: { confirm: "削除しますか?" }, class: "btn btn-danger button" %>
     <% end %>
   </div>
 </div>
