--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,13 @@
 <% if user_signed_in? %>
-  <h1>おすすめスポット一覧</h1>
-  <%= search_form_for @q do |form| %>
-    <%= form.search_field :title_or_situation_or_area_cont, placeholder: "タイトル・シチュエーション・エリア" %>
-    <%= form.submit "検索" %>
-  <% end %>
-  <%= render @posts %>
-  <%= paginate @posts %>
+  <div class="post-index-container">
+    <h1>おすすめスポット一覧</h1>
+    <%= search_form_for @q do |form| %>
+      <%= form.search_field :title_or_situation_or_area_cont, placeholder: "タイトル・シチュエーション・エリア", class: "search-form" %>
+      <%= form.submit "検索", class: "btn btn-info" %>
+    <% end %>
+    <%= render @posts %>
+    <%= paginate @posts %>
+  </div>
 <% else %>
   <section class="masthead" role="img" aria-label="Image Description">
     <h1>休日のひとり時間を楽しみに</h1>
