--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,32 +25,6 @@
       <canvas id="radar-chart" class="chart"></canvas>
     </div>
   </div>
-  <% if URI(request.referer.to_s).path != '/users' %>
-    <div class="like-comment-container">
-      <%# いいね機能 %>
-      <p id="post-<%= @post.id %>" class="like-btn">
-        <% if @post.liked_by?(current_user) %>
-          <%= render "like", post: @post %>
-        <% else %>
-          <%= render "dislike", post: @post %>
-        <% end %>
-      </p>
-      <%# コメント機能 %>
-      <%= form_with model: [@post, @comment], local: true do |form| %>
-        <%= form.text_area :content %>
-        <%= form.submit "コメントする" %>
-      <% end %>
-      <% @comments.each do |comment| %>
-        <p><%= comment.user.name %></p>
-        <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
-        <p><%= comment.content %></p>
-        <% if comment.user == current_user %>
-          <p><%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger" %>
-          </p>
-        <% end %>
-      <% end %>
-    </div>
-  <% end %>
   <%# マップ %>
   <div class="map-container">
     <h3>アクセス</h3>
@@ -60,6 +34,33 @@
   <%= javascript_pack_tag "map" %>
   <script async defer
              src="https://maps.googleapis.com/maps/api/js?v=weekly&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
+  <% if URI(request.referer.to_s).path != '/users' %>
+    <%# いいね機能 %>
+    <p id="post-<%= @post.id %>">
+      <% if @post.liked_by?(current_user) %>
+        <%= render "like", post: @post %>
+      <% else %>
+        <%= render "dislike", post: @post %>
+      <% end %>
+    </p>
+    <%# コメント機能 %>
+    <%= form_with model: [@post, @comment], local: true do |form| %>
+      <%= form.text_area :content, class: "comment-textarea" %>
+      <%= form.submit "コメントする", class: "btn btn-info" %>
+    <% end %>
+    <% @comments.each do |comment| %>
+      <div class="comment-container">
+        <p class="comment-user"><%= comment.user.name %></p>
+        <div class="comment-chat">
+          <p class="comment-content"><%= comment.content %></p>
+        </div>
+        <p class="comment-date"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+      </div>
+      <% if comment.user == current_user %>
+        <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger button" %>
+      <% end %>
+    <% end %>
+  <% end %>
   <%# 自分の投稿の場合は編集、削除を表示 %>
   <% if current_user.id == @post.user_id %>
     <%= link_to "編集", edit_post_path(@post), class: "btn btn-primary button" %>
