投稿詳細ページのボタンの文言を修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,4 +12,5 @@
   <section class="masthead" role="img" aria-label="Image Description">
     <h1>休日のひとり時間を楽しみに</h1>
     <h2>休日の選択肢を広げるおでかけ情報</h2>
-  <% end %>
+  </section>
+<% end %>
