--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -57,14 +57,14 @@
         <p class="comment-date"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
       </div>
       <% if comment.user == current_user %>
-        <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger button" %>
+        <%= link_to "コメント削除", post_comment_path(comment.post, comment), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger button" %>
       <% end %>
     <% end %>
   <% end %>
   <%# 自分の投稿の場合は編集、削除を表示 %>
   <% if current_user.id == @post.user_id %>
-    <%= link_to "編集", edit_post_path(@post), class: "btn btn-primary button" %>
-    <%= link_to "削除", post_path(@post), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger button" %>
+    <%= link_to "投稿編集", edit_post_path(@post), class: "btn btn-primary button" %>
+    <%= link_to "投稿削除", post_path(@post), method: :delete, data: { confirm: "削除しますか？" }, class: "btn btn-danger button" %>
   <% end %>
   <%= link_to "戻る", :back %>
 </div>
