--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer-container bg-primary">
-  <%= link_to image_tag("logo.jpeg", class: "logo"), posts_path %>
+  <%= link_to image_tag("logo.jpg", class: "logo"), posts_path %>
   <p class="copyright">&copy; 2022 Oneday </p>
 </div>
