--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,7 +33,7 @@
   </div>
   <%= javascript_pack_tag "map" %>
   <script async defer
-             src="https://maps.googleapis.com/maps/api/js?v=weekly&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
+             src="https://maps.googleapis.com/maps/api/js?v=weekly&key=<%= Rails.application.credentials.google_map_api_key %>&callback=initMap"></script>
   <% if URI(request.referer.to_s).path != '/users' %>
     <%# いいね機能 %>
     <p id="post-<%= @post.id %>">
